--- a/app.json
+++ b/app.json
@@ -9,8 +9,8 @@
         "deadlySameer",
         "SpamBots"
     ],
-    "repository": "https://t.me/NYHNA_LOGS",
-    "website": "https://t.me/NYHNA_LOGS",
+    "repository": "https://t.me/Alcoholic-Krish",
+    "website": "https://t.me/Alcoholic-Krish",
     "success_url": "https://t.me/NYHNA_SUPPORT",
     "env": {
              "API_ID": {
