--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
         "deadlySameer",
         "SpamBots"
     ],
-    "repository": "https://t.me/Deadly-Fighters",
+    "repository": "https://t.me/VENOM95823358158",
     "website": "https://t.me/Deadly-Fighters",
     "success_url": "https://t.me/deadly-fighters",
     "env": {
